# qli-math

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  health.py
backend/app/core/: config.py  security.py
backend/tests/: test_auth.py
docs/: content-roadmap.md  product-requirements.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/content/calculus/: chain-rule.md  derivative.md  gradient.md  integral.md  limits.md  taylor-expansion.md
frontend/src/content/discrete/: counting-principles.md  graphs.md  paths-and-connectivity.md  permutations-combinations.md  recurrence.md  relations.md
frontend/src/content/foundations/: functions-and-maps.md  mathematical-induction.md  necessary-and-sufficient.md  proof-methods.md  propositions-and-logic.md  quantifiers.md  sets-and-operations.md
frontend/src/content/linear-algebra/: basis-and-dimension.md  linear-combination.md  linear-independence.md  matrix-as-linear-map.md  matrix-multiplication.md  span.md  vectors.md
frontend/src/lib/: auth.ts  content.ts  data.ts
ui_design_hifi/: concept.html  dashboard.html  history.html  index.html  library.html  login.html  my-learning.html  route-detail.html  routes.html  settings.html
ui_design_hifi/css/: app.css
