[project]
name = "qli-math-backend"
version = "0.1.0"
description = "Qli Math API service"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.1.0,<5",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
